--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,2 +1,5 @@
 <p>Inside Parent Component</p>
-<app-child></app-child>
+<app-child [key] = "inputNumber">
+    <p>Enter any Number - (In Parent Component)</p>
+    <input type="number" placeholder="Enter any Number" [(ngModel)] = "inputNumber">
+</app-child>
