Moved the input tags outside app-child tag

--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,5 +1,4 @@
 <p>Inside Parent Component</p>
-<app-child [key] = "inputNumber">
-    <p>Enter any Number - (In Parent Component)</p>
+<p>Enter any Number - (In Parent Component)</p>
     <input type="number" placeholder="Enter any Number" [(ngModel)] = "inputNumber">
-</app-child>
+<app-child [key] = "inputNumber"></app-child>
