added button in child

--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,2 +1,5 @@
 <p>Inside Child Component</p>
 <p>Square of the Inputted Number is - {{key*key}}</p>
+<br>
+<p>Use @Output Decorator in Child Component</p>
+<button (click) = "childButton()"Submit></button>
