--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -2,3 +2,5 @@
 <p>Enter any Number - (In Parent Component)</p>
     <input type="number" placeholder="Enter any Number" [(ngModel)] = "inputNumber">
 <app-child [key] = "inputNumber"></app-child>
+<h3>Message Displayed from Child --> Parent is calling Child</h3>
+
