--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,6 +1,6 @@
 <p>Inside Parent Component</p>
 <p>Enter any Number - (In Parent Component)</p>
     <input type="number" placeholder="Enter any Number" [(ngModel)] = "inputNumber">
-<app-child [key] = "inputNumber"></app-child>
+<app-child [key] = "inputNumber" (dataFromChild) = "dataFromChild(event)"></app-child>
 <h3>Message Displayed from Child --> Parent is calling Child</h3>
 
