corrected the syntax of submit button

--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -2,4 +2,4 @@
 <p>Square of the Inputted Number is - {{key*key}}</p>
 <br>
 <p>Use @Output Decorator in Child Component</p>
-<button (click) = "childButton()"Submit></button>
+<button (click) = "childButton()">Submit</button>
