--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,6 +1,9 @@
 <p>Inside Parent Component</p>
 <p>Enter any Number - (In Parent Component)</p>
     <input type="number" placeholder="Enter any Number" [(ngModel)] = "inputNumber">
-<app-child [key] = "inputNumber" (dataFromChild) = "dataFromChild(event)"></app-child>
-<h3>Message Displayed from Child --> Parent is calling Child</h3>
 
+
+<app-child [key] = "inputNumber" (eventEmitter) = "dataFromChildFun($event)"></app-child>
+
+<h3>Message Displayed from Child --> Parent is calling Child</h3>
+<p>{{dataFromChild}}</p>
