added a button with onclock action for serviceCall

--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -7,3 +7,5 @@
 
 <h3>Message Displayed from Child --> Parent is calling Child</h3>
 <p>{{dataFromChild}}</p>
+
+<button (click) = "serviceCall()">Click Here to call Service Class</button>
